--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "bun --watch index.js"
   },
   "dependencies": {
-    "@elysiajs/static": "^0.6.0",
-    "elysia": "^0.6.20"
+    "@prisma/client": "5.2.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "prisma": "^5.2.0"
   }
 }
