--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "nunjucks": "^3.2.4",
     "prisma": "^5.2.0"
   },
   "devDependencies": {
